DE presentation added

--- a/02Alignment.ipynb
+++ b/02Alignment.ipynb
@@ -82,7 +82,7 @@
     }
    },
    "source": [
-    "<img src=\"gb-2013-14-4-r36-1.jpg\" width=\"550\">\n",
+    "<img src=\"images/gb-2013-14-4-r36-1.jpg\" width=\"550\">\n",
     "\n",
     "1. A read extending a few bases into the flanking exon can be aligned to the intron instead of the exon. \n",
     "2. A read spanning multiple exons from genes with processed pseudogene copies can be aligned to the pseudogene copies instead of the gene from which it originates."
@@ -131,8 +131,8 @@
     }
    },
    "source": [
-    "<img src=\"legend.png\" width=\"600\">\n",
-    "<img src=\"th1.png\" width=\"600\">\n",
+    "<img src=\"images/legend.png\" width=\"600\">\n",
+    "<img src=\"images/th1.png\" width=\"600\">\n",
     "\n",
     "Given RNA-Seq reads as input, TopHat2 begins by mapping reads against the known transcriptome (if available)."
    ]
@@ -148,7 +148,7 @@
     }
    },
    "source": [
-    "<img src=\"th2.png\" width=\"600\">\n",
+    "<img src=\"images/th2.png\" width=\"600\">\n",
     "\n",
     "TopHat2 aligns unmapped reads against the genome. Any reads contained entirely within exons will be mapped, whereas other spanning introns may not be."
    ]
@@ -165,7 +165,7 @@
     }
    },
    "source": [
-    "<img src=\"th3.png\" width=\"600\">\n",
+    "<img src=\"images/th3.png\" width=\"600\">\n",
     "\n",
     "The unmapped reads are split into smaller non-overlapping segments (25 bp each by default) which are then aligned against the genome."
    ]
@@ -181,7 +181,7 @@
     }
    },
    "source": [
-    "<img src=\"th4.png\" width=\"600\">\n",
+    "<img src=\"images/th4.png\" width=\"600\">\n",
     "\n",
     "Tophat2 examines any cases in which the left and right segments of the same read are mapped within a user-defined maximum intron size (usually between 50 and 100,000 bp). When this pattern is detected, TopHat2 re-aligns the entire read sequence to that genomic region in order to identify the most likely location of the splice site. It pays attention to the known junction signals (GT-AG, GC-AG, and AT-AC). The resulting spliced sequences are collected as a set of potential transcript fragments. Any reads not mapped in the previous stages (or mapped very poorly) are then re-aligned against this novel transcriptome."
    ]
@@ -198,7 +198,7 @@
     }
    },
    "source": [
-    "<img src=\"th7.png\" width=\"600\">\n",
+    "<img src=\"images/th7.png\" width=\"600\">\n",
     "\n",
     "After these steps, some of the reads may have been aligned incorrectly by extending an exonic alignment a few bases into the adjacent intron. TopHat2 checks if such alignments extend into the introns identified in the split-alignment phase; if so, it can realign these reads to the adjacent exons instead."
    ]
@@ -233,7 +233,7 @@
    "source": [
     "## Alignment file\n",
     "\n",
-    "<img src=\"20110524zurichngs-1st-pub-61-728.jpg\" width=\"700\">\n",
+    "<img src=\"images/20110524zurichngs-1st-pub-61-728.jpg\" width=\"700\">\n",
     "\n",
     "CIGAR: a string describing how the read aligns with the reference. It consists of one or more components. Each component comprises an operator and the number of bases which the operator applies to. Operators are: MIDNSHP=X.\n",
     "\n",
