--- a/03Quantification.ipynb
+++ b/03Quantification.ipynb
@@ -20,6 +20,22 @@
     }
    },
    "source": [
+    "## Motivation for RNA-Seq quantification\n",
+    "\n",
+    "- Typical studies:\n",
+    "    - DNA-Seq -> alignment -> variant calling;\n",
+    "    - RNA-Seq -> alignment -> quantification -> differential expression analysis\n",
+    "- We usually want to check if there is change in transcription between conditions (healthy/sick, treated/untreated, different tissues...)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## RNA-Seq quantification\n",
     "\n",
     "Raw counting or probabilistic estimation dilemma is (mostly) about doing analysis on gene vs transcript level.\n",
@@ -27,7 +43,7 @@
     "- On **transcript** level, we need an algorithm such as the Expectation Maximization (EM, pictured below) to deal with the uncertainty.\n",
     "\n",
     "<br>\n",
-    "<img src=\"em1.png\" width=\"550\">"
+    "<img src=\"images/em1.png\" width=\"550\">"
    ]
   },
   {
@@ -38,7 +54,18 @@
     }
    },
    "source": [
-    "<img src=\"em2.png\" width=\"550\">"
+    "<img src=\"images/em1.png\" width=\"550\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<img src=\"images/em2.png\" width=\"550\">"
    ]
   },
   {
@@ -207,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -232,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -270,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -294,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -305,8 +332,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.27 s, sys: 15.5 ms, total: 2.29 s\n",
-      "Wall time: 2.29 s\n"
+      "CPU times: user 3.99 s, sys: 35.8 ms, total: 4.02 s\n",
+      "Wall time: 4.03 s\n"
      ]
     }
    ],
@@ -328,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -339,7 +366,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "438\n"
+      "1016\n"
      ]
     }
    ],
@@ -368,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -381,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -392,8 +419,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.52 ms, sys: 1.21 ms, total: 2.74 ms\n",
-      "Wall time: 1.54 ms\n"
+      "CPU times: user 1.96 ms, sys: 893 µs, total: 2.85 ms\n",
+      "Wall time: 1.91 ms\n"
      ]
     }
    ],
@@ -408,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -419,7 +446,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "438\n"
+      "1016\n"
      ]
     }
    ],
@@ -451,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -487,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -497,10 +524,10 @@
     {
      "data": {
       "text/plain": [
-       "2282"
+       "5282"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -536,8 +563,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.37 s, sys: 47.1 ms, total: 3.42 s\n",
-      "Wall time: 3.42 s\n"
+      "CPU times: user 4.73 s, sys: 72.8 ms, total: 4.81 s\n",
+      "Wall time: 4.81 s\n"
      ]
     }
    ],
@@ -567,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -578,9 +605,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3369\n",
-      "1665\n",
-      "957\n"
+      "7283\n",
+      "3836\n",
+      "1641\n"
      ]
     }
    ],
@@ -589,377 +616,6 @@
     "print(gene_counts.get(\"SOX12\"))\n",
     "print(gene_counts.get(\"WFDC8\"))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Within sample normalization\n",
-    "\n",
-    "Raw read counts are dependent on gene expression as well as gene length. If we want to compare gene level abundances within a single sample, we need to normalize counts by the length of the gene.\n",
-    "\n",
-    "The normalization method that we will implement is called **TPM** (transcripts per million) and it allows for comparison of features with different length **within** a sample but not **between** samples. Between sample normalization will be the subject of the following lecture."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "def tpm(genefile, bamfile):\n",
-    "    \"\"\"\n",
-    "    Compute the TPM (transcripts per million) metric for all genes within the genefile using\n",
-    "    an RNA-Seq bamfile\n",
-    "    \"\"\"\n",
-    "    total_mapped_reads = 0\n",
-    "    \n",
-    "    # here you want all reads\n",
-    "    bam_iter = bamfile.fetch()\n",
-    "    \n",
-    "    for x in bam_iter:\n",
-    "        total_mapped_reads += 1\n",
-    "\n",
-    "    gene_counts = {}\n",
-    "    with open(genefile, 'r') as f:\n",
-    "        for line in f:\n",
-    "            tokens = line.split('\\t')\n",
-    "            gene_local = (tokens[0], int(tokens[1]), int(tokens[2]))\n",
-    "            gene_length = gene_local[2] - gene_local[1]\n",
-    "            raw_count = read_count(gene_local, bamfile)\n",
-    "            if tokens[3] in gene_counts:\n",
-    "                gene_counts[tokens[3]] = (gene_counts[tokens[3]][0] + raw_count, gene_length)\n",
-    "            else:\n",
-    "                gene_counts.update({tokens[3].rstrip() : (raw_count, gene_length)})   \n",
-    "    \n",
-    "    countsDF = pd.DataFrame(gene_counts, index=['raw_count', 'gene_length'])\n",
-    "    countsDF = countsDF.T\n",
-    "    X=countsDF.iloc[:,0].values\n",
-    "    l=countsDF.iloc[:,1].values\n",
-    "    countsDF = countsDF.assign(tpm = 1e6 * (X/l) / (X/l).sum())\n",
-    "    return(countsDF)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Now, lets give it a try"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 4.71 s, sys: 66.3 ms, total: 4.78 s\n",
-      "Wall time: 4.79 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "\n",
-    "gene_counts = tpm('gencode.v27.chr20.bed', bamfile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>raw_count</th>\n",
-       "      <th>gene_length</th>\n",
-       "      <th>tpm</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>RNU4ATAC7P</th>\n",
-       "      <td>54</td>\n",
-       "      <td>125</td>\n",
-       "      <td>1095.548656</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Z98752.1</th>\n",
-       "      <td>243</td>\n",
-       "      <td>1561</td>\n",
-       "      <td>394.776502</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OGFR-AS1</th>\n",
-       "      <td>825</td>\n",
-       "      <td>4961</td>\n",
-       "      <td>421.728203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AL031651.1</th>\n",
-       "      <td>2216</td>\n",
-       "      <td>1438</td>\n",
-       "      <td>3908.038141</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RNA5SP482</th>\n",
-       "      <td>34</td>\n",
-       "      <td>118</td>\n",
-       "      <td>730.709634</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>U3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>203</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RPLP0P1</th>\n",
-       "      <td>117</td>\n",
-       "      <td>361</td>\n",
-       "      <td>821.914389</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LINC00029</th>\n",
-       "      <td>456</td>\n",
-       "      <td>2812</td>\n",
-       "      <td>411.241988</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CHGB</th>\n",
-       "      <td>1156</td>\n",
-       "      <td>13932</td>\n",
-       "      <td>210.422556</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TRERNA1</th>\n",
-       "      <td>146</td>\n",
-       "      <td>789</td>\n",
-       "      <td>469.271064</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AL050404.1</th>\n",
-       "      <td>2981</td>\n",
-       "      <td>10650</td>\n",
-       "      <td>709.839711</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AL139350.1</th>\n",
-       "      <td>188</td>\n",
-       "      <td>513</td>\n",
-       "      <td>929.369483</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AL391095.2</th>\n",
-       "      <td>138</td>\n",
-       "      <td>4355</td>\n",
-       "      <td>80.359801</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DUXAP7</th>\n",
-       "      <td>305</td>\n",
-       "      <td>853</td>\n",
-       "      <td>906.773317</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NORAD</th>\n",
-       "      <td>2266</td>\n",
-       "      <td>5339</td>\n",
-       "      <td>1076.336104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AL121845.2</th>\n",
-       "      <td>1278</td>\n",
-       "      <td>2129</td>\n",
-       "      <td>1522.310055</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AL009050.1</th>\n",
-       "      <td>136</td>\n",
-       "      <td>5317</td>\n",
-       "      <td>64.866456</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>KCNK15-AS1</th>\n",
-       "      <td>2055</td>\n",
-       "      <td>51130</td>\n",
-       "      <td>101.925760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SLC17A9</th>\n",
-       "      <td>1367</td>\n",
-       "      <td>16939</td>\n",
-       "      <td>204.657974</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HMGB3P1</th>\n",
-       "      <td>270</td>\n",
-       "      <td>888</td>\n",
-       "      <td>771.078727</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            raw_count  gene_length          tpm\n",
-       "RNU4ATAC7P         54          125  1095.548656\n",
-       "Z98752.1          243         1561   394.776502\n",
-       "OGFR-AS1          825         4961   421.728203\n",
-       "AL031651.1       2216         1438  3908.038141\n",
-       "RNA5SP482          34          118   730.709634\n",
-       "U3                  0          203     0.000000\n",
-       "RPLP0P1           117          361   821.914389\n",
-       "LINC00029         456         2812   411.241988\n",
-       "CHGB             1156        13932   210.422556\n",
-       "TRERNA1           146          789   469.271064\n",
-       "AL050404.1       2981        10650   709.839711\n",
-       "AL139350.1        188          513   929.369483\n",
-       "AL391095.2        138         4355    80.359801\n",
-       "DUXAP7            305          853   906.773317\n",
-       "NORAD            2266         5339  1076.336104\n",
-       "AL121845.2       1278         2129  1522.310055\n",
-       "AL009050.1        136         5317    64.866456\n",
-       "KCNK15-AS1       2055        51130   101.925760\n",
-       "SLC17A9          1367        16939   204.657974\n",
-       "HMGB3P1           270          888   771.078727"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gene_counts.iloc[sample(range(gene_counts.shape[0]), 20)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def rpkm(genefile, bamfile):\n",
-    "    \"\"\"\n",
-    "    Compute the RPKM (reads per kilobase per million mapped reads) metric for all genes within the genefile using\n",
-    "    an RNA-Seq bamfile\n",
-    "    \"\"\"\n",
-    "    total_mapped_reads = 0\n",
-    "    \n",
-    "    # here you want all reads\n",
-    "    bam_iter = bamfile.fetch()\n",
-    "    \n",
-    "    for x in bam_iter:\n",
-    "        total_mapped_reads += 1\n",
-    "\n",
-    "    gene_counts = {}\n",
-    "    with open(genefile, 'r') as f:\n",
-    "        for line in f:\n",
-    "            tokens = line.split('\\t')\n",
-    "            gene_local = (tokens[0], int(tokens[1]), int(tokens[2]))\n",
-    "            gene_length=gene_local[2]-gene_local[1]\n",
-    "            rpk_metric = 1e9 * read_count(gene_local, bamfile) \\\n",
-    "                            / (total_mapped_reads * gene_length)\n",
-    "            gene_counts.update({tokens[3].rstrip() : rpk_metric})   \n",
-    "    return(gene_counts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 4.65 s, sys: 55 ms, total: 4.71 s\n",
-      "Wall time: 4.71 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "\n",
-    "gene_counts_rpkm = rpkm('gencode.v27.chr20.bed', bamfile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "162.84688065616749\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(gene_counts_rpkm.get('OGFR-AS1'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
