--- a/01Introduction.ipynb
+++ b/01Introduction.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "(over)simplified: “DNA makes RNA, RNA makes proteins, proteins make us.”\n",
     "\n",
-    "<img src=\"dogma.png\" width=\"500\">\n",
+    "<img src=\"images/dogma.png\" width=\"500\">\n",
     "\n",
     "- Transcription\n",
     "- Splicing\n",
@@ -44,7 +44,7 @@
     "There are other types of RNA besides messenger RNA (mRNA): transfer RNA (tRNA), ribosomal RNA (rRNA), small and long non coding RNA (ncRNA).\n",
     "\n",
     "<br>\n",
-    "<img src=\"Peptide_syn.png\" width=\"400\">"
+    "<img src=\"images/Peptide_syn.png\" width=\"400\">"
    ]
   },
   {
@@ -55,7 +55,7 @@
     }
    },
    "source": [
-    "<img src=\"proc2.png\" width=\"500\">"
+    "<img src=\"images/proc2.png\" width=\"500\">"
    ]
   },
   {
@@ -66,7 +66,7 @@
     }
    },
    "source": [
-    "<img src=\"proc1.png\" width=\"500\">"
+    "<img src=\"images/proc1.png\" width=\"500\">"
    ]
   },
   {
@@ -77,7 +77,7 @@
     }
    },
    "source": [
-    "<img src=\"proc3.png\" width=\"500\">"
+    "<img src=\"images/proc3.png\" width=\"500\">"
    ]
   },
   {
@@ -88,7 +88,7 @@
     }
    },
    "source": [
-    "<img src=\"proc4.png\" width=\"500\">"
+    "<img src=\"images/proc4.png\" width=\"500\">"
    ]
   },
   {
@@ -102,7 +102,7 @@
     "From a single gene, multiple **transcripts**(**isoforms**) can (and usually will) be formed.\n",
     "\n",
     "<br>\n",
-    "<img src=\"isoforms.png\" width=\"700\">"
+    "<img src=\"images/isoforms.png\" width=\"700\">"
    ]
   },
   {
@@ -132,10 +132,50 @@
     }
    },
    "source": [
-    "Most of the RNA in a cell is ribosomal RNA (an RNA component of ribosome which is approx 60% rRNA and 40% protein). This is an issue since most scientists (and enthusiasts like us) will be interested in mRNA because of its protein coding function. There are two popular methods for increasing mRNA concentration in your samples:\n",
+    "## Before sequencing - library prep!\n",
     "\n",
-    "1. poly (A) capture \n",
-    "2. ribosomal RNA depletion\n",
+    "Choosing the appropriate sequencing protocol:\n",
+    "\n",
+    "- Most of the RNA in a cell is ribosomal RNA (an RNA component of ribosome which is approx 60% rRNA and 40% protein). This is an issue since most scientists (and enthusiasts like us) will be interested in mRNA because of its protein coding function. There are two popular methods for increasing mRNA concentration in your samples:\n",
+    "\n",
+    "    1. poly (A) capture \n",
+    "    2. ribosomal RNA depletion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<img src=\"images/lp1.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<img src=\"images/lp2.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- There are also total-RNA protocols that do not enrich for a specific RNA type\n",
+    "- Different fragment sizes\n",
+    "- Bulk or single cel RNA-Seq\n",
+    "- ...\n",
     "\n",
     "Then what? Microarrays or RNA-Seq!"
    ]
@@ -144,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -201,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -211,7 +251,7 @@
     "- Uses next-generation sequencing (NGS) to reveal the presence and quantity of RNA in a biological sample at a given moment.\n",
     "- Able to detect novel (undiscovered) isoforms and has a broader dynamic range compapred to microarrays.\n",
     "\n",
-    "<img src=\"http://bio.lundberg.gu.se/courses/vt13/rna4.JPG.jpg\" width=\"450\">"
+    "<img src=\"images/Bo7TRo5IUAAJ6KD.jpg\" width=\"450\">"
    ]
   },
   {
