--- a/01Introduction.ipynb
+++ b/01Introduction.ipynb
@@ -172,9 +172,9 @@
     }
    },
    "source": [
-    "- There are also total-RNA protocols that do not enrich for a specific RNA type\n",
+    "- There are also total-RNA protocols that do not enrich for a specific RNA type - for \"total RNA\" studies.\n",
     "- Different fragment sizes\n",
-    "- Bulk or single cel RNA-Seq\n",
+    "- Bulk or single cell RNA-Seq\n",
     "- ...\n",
     "\n",
     "Then what? Microarrays or RNA-Seq!"
