--- a/02Alignment.ipynb
+++ b/02Alignment.ipynb
@@ -12,7 +12,9 @@
    },
    "source": [
     "## Genome informatics\n",
-    "# RNA-Seq analysis : Alignment"
+    "# RNA-Seq analysis : Alignment\n",
+    "\n",
+    "\\* Adapted from [Tophat2 paper](https://genomebiology.biomedcentral.com/articles/10.1186/gb-2013-14-4-r36)"
    ]
   },
   {
