--- a/03Quantification.ipynb
+++ b/03Quantification.ipynb
@@ -23,9 +23,11 @@
     "## Motivation for RNA-Seq quantification\n",
     "\n",
     "- Typical studies:\n",
-    "    - DNA-Seq -> alignment -> variant calling;\n",
-    "    - RNA-Seq -> alignment -> quantification -> differential expression analysis\n",
-    "- We usually want to check if there is change in transcription between conditions (healthy/sick, treated/untreated, different tissues...)."
+    "    - DNA-Seq -> alignment -> variant calling -> genome wide association study;\n",
+    "  \n",
+    "    <img src=\"images/GWAS2-700x438.png\" width=\"400\">\n",
+    "    \n",
+    "    - RNA-Seq -> alignment -> quantification -> differential expression analysis"
    ]
   },
   {
@@ -43,17 +45,6 @@
     "- On **transcript** level, we need an algorithm such as the Expectation Maximization (EM, pictured below) to deal with the uncertainty.\n",
     "\n",
     "<br>\n",
-    "<img src=\"images/em1.png\" width=\"550\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
     "<img src=\"images/em1.png\" width=\"550\">"
    ]
   },
@@ -93,7 +84,7 @@
     "\n",
     "We shall, for simplicity's sake, only perform gene level quantification. Even though it has some drawbacks, it's a strategy still used by most genomic scientists. Here's what we have at the beginning of the quantification step and what we want to estimate:\n",
     "\n",
-    "- We **have**: aligned reads. A file format called SAM/BAM is now the standard formats for next-generation sequence alignments.\n",
+    "- We **have**: aligned reads and annotations. A file format called SAM/BAM is now the standard formats for next-generation sequence alignments.\n",
     "- We **estimate**: relative abundance.\n",
     "\n",
     "We'll start with some simple methods to compare two features. We say that 2 intervals overlap if any region of the two features cover the same position."
