--- a/01Introduction.ipynb
+++ b/01Introduction.ipynb
@@ -115,9 +115,7 @@
    "source": [
     "## Why measure gene expression?\n",
     "\n",
-    "Small variations in our DNA can correlate with differences in the way individuals respond to a medication or in their risk for getting a disease. Often, these variations occur within the DNA letters that make up the protein-coding portion of a gene, influencing how the protein works.\n",
-    "\n",
-    "Changing the protein-coding sequence isn't the only way to affect a gene, though. **Increasing or decreasing the amount of RNA or protein that is made from it can influence biological processes just as dramatically.** \n",
+    "**Because gene expression correlates with protein expression!**\n",
     "\n",
     "Even though nearly every cell in an organism's body contains the same set of genes, only a fraction of these genes are used in any given cell at any given time. It is this carefully controlled pattern of what is called \"gene expression\" that makes a liver cell different from a muscle cell, and a healthy cell different from a cancer cell. \n",
     "\n",
@@ -172,9 +170,9 @@
     }
    },
    "source": [
-    "- There are also total-RNA protocols that do not enrich for a specific RNA type - for \"total RNA\" studies.\n",
-    "- Different fragment sizes\n",
-    "- Bulk or single cell RNA-Seq\n",
+    "- There are also total-RNA protocols that do not enrich for a specific RNA type - for \"total RNA\" studies;\n",
+    "- Different fragment sizes;\n",
+    "- Bulk or single cell RNA-Seq;\n",
     "- ...\n",
     "\n",
     "Then what? Microarrays or RNA-Seq!"
