--- a/03Quantification.ipynb
+++ b/03Quantification.ipynb
@@ -23,7 +23,7 @@
     "## Motivation for RNA-Seq quantification\n",
     "\n",
     "- Typical studies:\n",
-    "    - DNA-Seq -> alignment -> variant calling -> genome wide association study;\n",
+    "    - DNA-Seq -> alignment -> variant calling -> genome wide association study (GWAS);\n",
     "  \n",
     "    <img src=\"images/GWAS2-700x438.png\" width=\"400\">\n",
     "    \n",
@@ -87,12 +87,12 @@
     "- We **have**: aligned reads and annotations. A file format called SAM/BAM is now the standard formats for next-generation sequence alignments.\n",
     "- We **estimate**: relative abundance.\n",
     "\n",
-    "We'll start with some simple methods to compare two features. We say that 2 intervals overlap if any region of the two features cover the same position."
+    "We'll start with some simple methods to find if two intervals overlap."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -136,56 +136,7 @@
    "source": [
     "region1 = (\"chr3\", 27, 82)\n",
     "region2 = (\"chr4\", 27, 82)\n",
-    "region3 = (\"chr3\", 57, 75)\n",
-    "region4 = (\"chr3\", 85, 107)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "overlap(region1, region2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "overlap(region1, region3)"
+    "region3 = (\"chr3\", 57, 75)"
    ]
   },
   {
@@ -209,7 +160,31 @@
     }
    ],
    "source": [
-    "overlap(region1, region4)"
+    "overlap(region1, region2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "overlap(region1, region3)"
    ]
   },
   {
@@ -225,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -245,12 +220,12 @@
     }
    },
    "source": [
-    "To start exploring reads from a SAM/BAM file, let's first load the file."
+    "To start exploring reads from a SAM/BAM file, we first need to load the file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -283,12 +258,14 @@
     }
    },
    "source": [
-    "An important and very common application is to count the number of reads (aligned fragments) that overlap a give feature (i.e. region of the genome or gene). One simple approach to doing this is to make a list of all reads generated and simply iterate over the reads to identify whether a read overlaps a region. In this case we need an overlap method that can compare a simple interval (defined by a tuple of chr, start, end) with a pysam AlignedSegment object. This overlap method needs the AlignmentFile object to decode chromosome name, otherwise it is very similar to the above overlap() function."
+    "An important and very common application is to count the number of reads (aligned fragments) that overlap a given feature (i.e. region of the genome or gene). One simple approach to doing this is to make a list of all reads generated and simply iterate over the reads to identify whether a read overlaps a region. \n",
+    "\n",
+    "In this case we need an overlap method that can compare a simple interval (defined by a tuple of sequence, start, end) with a pysam AlignedSegment object. This overlap method also needs the AlignmentFile object to decode the chromosome name."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -323,8 +300,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.99 s, sys: 35.8 ms, total: 4.02 s\n",
-      "Wall time: 4.03 s\n"
+      "CPU times: user 3.98 s, sys: 34.9 ms, total: 4.01 s\n",
+      "Wall time: 4.02 s\n"
      ]
     }
    ],
@@ -377,10 +354,6 @@
     "\n",
     "Instead, more efficient datastructures (and indexing schemes) can be used to retrieve reads based on positions in more efficient ways.\n",
     "\n",
-    "Now that you have access to all of the methods in the Pysam package. Let's take a tour of some of the things you can do in Pysam. We'll start by counting the number of reads over the same region above, but in a smarter way.\n",
-    "\n",
-    "(Note: the exact way Pysam, Picard and other tools implement this is based on a similar concept to the interval tree, but generally involve a tree built on a file index so as to avoid reading the entire file into memory, but for the purposes of this discussion the implementation details are not important).\n",
-    "\n",
     "To get the reads overlapping a given region, Pysam has a method called fetch(), which takes the genomic coordinates and returns an iterator of all reads overlapping that region."
    ]
   },
@@ -410,8 +383,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.96 ms, sys: 893 µs, total: 2.85 ms\n",
-      "Wall time: 1.91 ms\n"
+      "CPU times: user 2.21 ms, sys: 878 µs, total: 3.08 ms\n",
+      "Wall time: 2.07 ms\n"
      ]
     }
    ],
@@ -453,7 +426,7 @@
     }
    },
    "source": [
-    "Not surprisingly, they are the same - the big difference is that the second method is significantly faster. The reason for this is that Pysam (and Samtools, Picard, and other similar packages) make use of clever tricks to index the file by genomic positions to more efficiently search for reads within a given genomic interval."
+    "Not surprisingly, they are the same - the big difference is that the second method is significantly faster. The reason for this is that Pysam (like Samtools, Picard, and other similar toolkits) make use of clever tricks to index the file by genomic positions to more efficiently search for reads within a given genomic interval."
    ]
   },
   {
@@ -500,7 +473,7 @@
     }
    },
    "source": [
-    "You can run this with any gene tuple now"
+    "You can run this with any gene tuple now:"
    ]
   },
   {
@@ -538,7 +511,7 @@
     }
    },
    "source": [
-    "Now, let's compute the gene counts for all genes. We'll start by reading in all genes"
+    "Now, let's compute the gene counts for all genes. We'll start by reading in all genes:"
    ]
   },
   {
